cabal-version:      3.0
name:               nullsec-netseer
version:            2.0.0
synopsis:           Hardened Network Traffic Analyzer
description:        Pure functional network traffic analysis with strong type safety
license:            NONE
author:             bad-antics
maintainer:         bad-antics@nullsec
category:           Security
build-type:         Simple

executable netseer
    main-is:          NetSeer.hs
    build-depends:
        base >= 4.14 && < 5,
        bytestring >= 0.11,
        containers >= 0.6,
        directory >= 1.3,
        time >= 1.9
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wmissing-export-lists
        -Wmissing-home-modules
        -Wpartial-fields
        -Wredundant-constraints
        -O2
        -threaded
        -rtsopts
        -with-rtsopts=-N
